app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 */

@import "uikit/variables-theme.scss";
@import "uikit/mixins-theme.scss";
@import "uikit/uikit-theme.scss";

//MIXINS
@mixin unselectable {
    -webkit-user-select: none;

    /* Safari */
    -moz-user-select: none;

    /* Firefox */
    -ms-user-select: none;

    /* IE10+/Edge */
    user-select: none;

    /* Standard */
    cursor: default;
}

//VARIABLES
$no_cover_width: 200px;
$no_cover_height: 266px;

$background: #dddddd;
$accent: #75C7AF;
$dark_accent: #49AB8A;
$warning: #e9806e;
$light: rgba(255, 255, 255, 0.5);
$light_nt: rgb(154, 154, 154);
$lighter: rgba(255, 255, 255, 0.7);
$lighter_nt: rgb(197, 197, 197);
$light_grey: #999;
$dark_grey: #666;
$slide_grey: #393939;
$disabled: #b4b4b4;

@import "covers";
@import "panels";
@import "list";
@import "s_list";
@import "collections";
@import "game_offc";

// NAVIGATION
#logo {
    position: absolute;
    left: 20px;
    top: 15px;
    z-index: 110;
    color: #999;
    letter-spacing: 0.5px;
    font-weight: 300;
    font-size: 16px;
    border-bottom: 2px solid #cacaca;
}

#logo input {
    border: none;
    background: #dddddd;
    color: #999;
    font-size: 16px;
    font-weight: 300;
    letter-spacing: 0.5px;

    &:focus {
        outline: none;
    }
}

#logout, #settings, #social {
    position: absolute;
    top: 20px;
    color: $light_grey;

    &:hover {
        color: $dark_grey;
    }
}

#social {
    right: 110px;
}

#settings {
    right: 65px;
}

#logout {
    right: 20px;
}

// SEARCH WAIT
div#search-results.mask1:after {
    position: absolute;
    content: "";
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    background: #ddddddad;
    z-index: 2;
}

div#search-results.mask2:after {
    position: absolute;
    content: "";
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    background: #dddddde6;
    z-index: 2;
}

#search-wait {
    position: fixed;
    top: 50vh;
    left: 50%;
    width: 120px;
    height: 178px;
    margin-left: -60px;
    margin-top: -89px;
    z-index: -1;

    p {
        font-size: 20px;

        margin-left: 8px;

        color: #afafaf;
        margin-top: 5px;
        letter-spacing: 0.3px;
    }

    p:after {
        position: absolute;
        content: "";
        animation: 2s infinite dots linear;
    }
}

#search-wait.front {
    z-index: 3;
}

.rotor {
    width: 100px;
    height: 100px;
    margin: 0 auto;
    border-radius: 50%;
    animation: 2s infinite search linear;
}

.rotor svg {
    fill: #bbbbbb;
    animation: 2s infinite search linear;
    animation-direction: reverse;
    width: 80px;
    height: auto;
}

@keyframes search {
    from {
        transform: rotate(0);
    }

    to {
        transform: rotate(360deg);
    }
}

@keyframes dots {
    0% {
        content: "";
    }

    25% {
        content: ".";
    }

    50% {
        content: "..";
    }

    75% {
        content: "...";
    }
}

.csv_spin {
    width: 50px;
    margin: 10px auto;

    svg {
        fill: #bbbbbb;
        animation: 1s infinite normal rotate;
        animation-timing-function: linear;
    }
}

// PLEASE WAIT

.loading:after {
    position: absolute;
    content: "";
    animation: 1.5s infinite dots linear;
}

// NO GAMES
.not-active {
    pointer-events: none;
    cursor: default;
    text-decoration: none;
}

.uk-input:disabled {
    background: none;
}

#no-games, #no-results {
    transform: translate(-50%, -50%);
    position: absolute;
    top: 50%;
    left: 50%;
    text-align: center;
    font-size: 40px;
    color: #adadad;
    font-weight: 300;

    p {
        font-size: 14px;
        color: #999;
        border-top: thin solid #bababa;
        padding-top: 10px;
    }

    a:hover {
        color: #666;
    }
}

// SCREEN AS IMAGE
.s-cover {
    height: $no_cover_height;
    object-fit: cover;
}

// HTML, BODY
html {
    background-color: $background;
}

body {
    overflow-y: scroll;
    scrollbar-width: none;
    -ms-overflow-style: none;
}

body::-webkit-scrollbar {
    width: 0 !important;
}

.main-container {
    position: relative;
    min-height: 100vh;
}

#big-c {
    margin-top: 80px;
    padding-bottom: 160px;
}

// FOOTER
footer {
    position: absolute;
    bottom: 20px;
    background: none;
    right: 24px;
    font-size: 12px;

    ul {
        list-style: none;
        margin: 0;
        padding: 0;

        li {
            float: right;
            padding-left: 10px;
            height: 15px;
        }

        a {
            color: $light_grey;
            transition: color 0.2s ease-in-out;
        }

        a:hover {
            color: $dark_grey;
            outline: none;
            text-decoration: none;
        }
    }
}

// NOTIFICATIONS
.uk-notification-close {
    top: unset;
    bottom: 13px;
    right: 10px;
}

a.uk-notification-close {
    svg {
        width: 12px;
        height: 12px;

        line {
            stroke-width: 1.4;
        }
    }
}
/* ... */

